--- a/sites/template/docker-compose.yml
+++ b/sites/template/docker-compose.yml
@@ -41,7 +41,9 @@ services:
       WORDPRESS_DB_USER: ${DB_USER}
       WORDPRESS_DB_PASSWORD: ${DB_PASSWORD}
       WORDPRESS_DB_NAME: ${DB_NAME}
-      WORDPRESS_REDIS_HOST: redis
+      WORDPRESS_CONFIG_EXTRA: |
+        define( 'WP_REDIS_HOST', 'redis' );
+        define( 'WP_REDIS_PORT', 6379 );
     volumes:
       - wp_data:/var/www/html
     networks:
